--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["royce79-creator <connorsboyce07@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pytest-watch = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
